# knockknock

./: .git-blame-ignore-revs  .gitignore  .pylintrc  CHANGELOG.md  README.koyeung.md  README.md  command.py  extension.py  knockknock.py  mypy.ini  pyproject.toml  tox.ini  utils.py
.github/workflows/: check.yml
docs/: pluginWriting.txt  plugin_writing.md  usage.txt
knockknock/: command.py  extension.py  file.py  knockknock.py  output.py  utils.py  virusTotal.py  virustotal.py  whitelist.py
knockknock/plugins/: authorizationPlugin.py  authorization_plugin.yapsy-plugin  browserExtension.py  browser_extension.py  cronjob.py  dylib.py  kext.py  launchDandA.py  launch_d_and_a.yapsy-plugin  launchdConf.py  logHook.py  log_hook.py  log_hook.yapsy-plugin  loginItem.py  login_item.yapsy-plugin  overRide.py  override.yapsy-plugin  rcScript.py  rc_script.py  spotlightImporter.py  spotlight_importer.py  spotlight_importer.yapsy-plugin  startupItem.py  startup_item.py  startup_item.yapsy-plugin  unclassified.py
plugins/: authorizationPlugin.py  browserExtension.py  cronjob.py  dylib.py  kext.py  launchDandA.py  launchdConf.py  logHook.py  loginItem.py  overRide.py  rcScript.py  spotlightImporter.py  startupItem.py  unclassified.py
src/knockknock/: __init__.py  _types.py  file.py  knockknock.py  plugin_base.py  utils.py  virustotal.py
src/knockknock_plugins/: authorization_plugin.py  browser_extension.py  browser_extension.yapsy-plugin  cronjob.py  dylib.py  kext.py  launch_d_and_a.py  launchd_conf.py  launchd_conf.yapsy-plugin  log_hook.py  login_item.py  override.py  (+5 more)
